# 10.000

./: .gitignore  README.md  agent.py  api.py  plot_results.py  prelim-prompt.md  pyproject.toml  readme.md  setup.py  training_lengths.npy
src/: agent.py  bindings.cpp  env.py  farkle_core.cpp  farkle_env.py  game.py  train.py
src/10k_game_custom_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: parity_check.py  test_agent_api.py  test_engine_parity.py  test_game.py
web-ui/: package.json  pnpm-lock.yaml
web-ui/src/: App.jsx  farkle-engine.ts
