[project]
name = "10k-game-custom-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "fastapi>=0.128.6",
    "gymnasium>=1.2.3",
    "requests>=2.32.5",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
    "pybind11>=2.13.6",
    "setuptools>=75.8.0",
]

[build-system]
requires = ["setuptools>=75.8.0", "pybind11>=2.13.6"]
build-backend = "setuptools.build_meta"
